Added sidenav menu logo and links; changed the main font; adjusted some styles

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,6 +18,14 @@ mat-sidenav-container {
   height: 100%;
 }
 
-app-menu {
-  color: #a6b2c1;
+.logo {
+  margin-top: 5px;
+  padding: 5px;
+  text-align: center;
+}
+
+.logo img {
+  width: 100%;
+  height: 50px;
+  margin-left: 5px;
 }
