--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,1 +1,17 @@
-<p>menu works!</p>
+<mat-nav-list>
+  <a mat-list-item routerLink="/students">
+    <mat-icon>school</mat-icon>
+    <span class="nav-link">Alunos</span>
+  </a>
+  <a mat-list-item routerLink="/teachers">
+    <mat-icon>accessibility_new</mat-icon> <span class="nav-link">Professores</span>
+  </a>
+  <a mat-list-item routerLink="/calendar">
+    <mat-icon>date_range</mat-icon>
+    <span class="nav-link">Calendário</span>
+  </a>
+  <a mat-list-item routerLink="/system-settings">
+    <mat-icon>settings</mat-icon>
+    <span class="nav-link">Configurações</span>
+  </a>
+</mat-nav-list>
