--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <mat-sidenav-container>
   <mat-sidenav [mode]="mobileQuery.matches ? 'over' : 'side'" opened>
+    <!-- logo -->
+    <div class="logo">
+      <img src="../assets/images/logo.png" alt="MS Admin Logo">
+    </div>
+    <!-- menu -->
     <app-menu></app-menu>
   </mat-sidenav>
   <mat-sidenav-content>
+    <!-- header -->
     <app-header *ngIf="!isLoginPage"></app-header>
+    <!-- content -->
     <router-outlet></router-outlet>
+    <!-- footer -->
     <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
