--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,8 @@
 <mat-nav-list>
+  <a mat-list-item routerLink="/dashboard">
+    <mat-icon>insert_chart_outlined</mat-icon>
+    <span class="nav-link">Dashboard</span>
+  </a>
   <a mat-list-item routerLink="/students">
     <mat-icon>school</mat-icon>
     <span class="nav-link">Alunos</span>
