--- a/src/app/pages/teachers/details/teachers-details.component.html
+++ b/src/app/pages/teachers/details/teachers-details.component.html
@@ -1,3 +1,17 @@
-<section class="content">
-  <p>Teachers</p>
+<section class="page-default">
+  <!-- breadcrumb -->
+  <app-breadcrumb [breadcrumbs]="[ 
+    {icon: 'accessibility_new' , label: 'Professores', link: '/teachers' },
+    {icon: 'accessibility_new' , label: 'Professores' }]">
+  </app-breadcrumb>
+
+  <!-- page title -->
+  <app-page-title [pageTitle]="{
+    icon: 'accessibility_new', title: 'Professores'}">
+  </app-page-title>
+
+  <!-- content -->
+  <div class="content">
+    <p>Teachers Details</p>
+  </div>
 </section>
