--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,16 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.content {
+app-breadcrumb {
+  display: inline-flex;
+  background-color: #fff;
+  width: 100%;
+  padding: 5px 2px 5px 2px;
+}
+
+.page-default {
   padding: 25px;
+}
+
+.content {
 }
