--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,6 +4,20 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="User icon">person</mat-icon>
+    <button mat-icon-button [matMenuTriggerFor]="userDropdown">
+      <mat-icon>account_circle</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<!-- user dropdown menu -->
+<mat-menu #userDropdown="matMenu">
+  <button mat-menu-item>
+    <mat-icon>person</mat-icon>
+    <span>Editar Perfil</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>exit_to_app</mat-icon>
+    <span>Sair</span>
+  </button>
+</mat-menu>
