Created datatable component and module; Added buttons for export and add new student / teacher; routing for add new student / teacher; Added input to filter on datatable

--- a/src/app/pages/students/details/students-details.component.html
+++ b/src/app/pages/students/details/students-details.component.html
@@ -2,12 +2,12 @@
   <!-- breadcrumb -->
   <app-breadcrumb [breadcrumbs]="[ 
     {icon: 'school' , label: 'Alunos', link: '/students' },
-    {icon: 'school' , label: 'Alunos' }]">
+    {icon: 'school' , label: 'Aluno' }]">
   </app-breadcrumb>
 
   <!-- page title -->
   <app-page-title [pageTitle]="{
-    icon: 'school', title: 'Alunos'}">
+    icon: 'school', title: 'Aluno'}">
   </app-page-title>
 
   <!-- content -->
