--- a/src/app/pages/teachers/details/teachers-details.component.html
+++ b/src/app/pages/teachers/details/teachers-details.component.html
@@ -2,12 +2,12 @@
   <!-- breadcrumb -->
   <app-breadcrumb [breadcrumbs]="[ 
     {icon: 'accessibility_new' , label: 'Professores', link: '/teachers' },
-    {icon: 'accessibility_new' , label: 'Professores' }]">
+    {icon: 'accessibility_new' , label: 'Professor' }]">
   </app-breadcrumb>
 
   <!-- page title -->
   <app-page-title [pageTitle]="{
-    icon: 'accessibility_new', title: 'Professores'}">
+    icon: 'accessibility_new', title: 'Professor'}">
   </app-page-title>
 
   <!-- content -->
