--- a/src/app/pages/teachers/main/teachers.component.html
+++ b/src/app/pages/teachers/main/teachers.component.html
@@ -9,8 +9,20 @@
   icon: 'accessibility_new', title: 'Professores'}">
   </app-page-title>
 
+  <!-- buttons -->
+  <div class="mb-2">
+    <button mat-raised-button class="mr-1">
+      <mat-icon>upgrade</mat-icon>
+      Exportar
+    </button>
+    <button mat-raised-button color="primary" (click)="addTeacher()">
+      <mat-icon>person_add</mat-icon>
+      Add Professor
+    </button>
+  </div>
+
   <!-- content -->
   <div class="content">
-    <p>Teachers</p>
+    <app-datatable></app-datatable>
   </div>
 </section>
