--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,26 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+/* DEFAULT */
+.mr-1 {
+  margin-right: 10px !important;
+}
+
+.mb-1 {
+  margin-bottom: 10px !important;
+}
+
+.mb-2 {
+  margin-bottom: 20px !important;
+}
+
+/*  */
 app-breadcrumb {
   display: inline-flex;
   background-color: #fff;
   width: 100%;
   padding: 5px 2px 5px 2px;
+  border-radius: 4px;
 }
 
 .page-default {
@@ -21,4 +36,8 @@ app-breadcrumb {
 }
 
 .content {
+  background-color: #fff;
+  padding: 10px 5px;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1) !important;
+  border-radius: 4px;
 }
