Configured datatable component to recieve data dynamically; Students main page getting all students array and passing data to datatable;

--- a/src/app/pages/students/main/students.component.html
+++ b/src/app/pages/students/main/students.component.html
@@ -23,6 +23,8 @@
 
   <!-- content -->
   <div class="content">
-    <app-datatable></app-datatable>
+    <app-datatable [tableData]="students" [tableColumns]="['status', 'name', 'email', 'age', 'course']"
+      [tableHeaderCells]="['Status', 'Nome', 'E-mail', 'Idade', 'Curso']">
+    </app-datatable>
   </div>
 </section>
