--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -8,5 +8,17 @@
   </div>
 
   <!-- table -->
+  <mat-table [dataSource]="tableData" matSort>
+    <ng-container *ngFor="let column of tableColumns; let i = index;" [matColumnDef]="column">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{tableHeaderCells[i]}}</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element[column]}}</mat-cell>
+    </ng-container>
 
+    <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: tableColumns;"></mat-row>
+
+  </mat-table>
+
+  <!-- paginator -->
+  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 50]"></mat-paginator>
 </div>
