--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ app-breadcrumb {
 
 .content {
   background-color: #fff;
-  padding: 10px 5px;
+  padding: 15px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1) !important;
   border-radius: 4px;
 }
