Created and configured teachersService; Added getAllTeachers method to teachers component and built the datatable via input

--- a/src/app/pages/teachers/main/teachers.component.html
+++ b/src/app/pages/teachers/main/teachers.component.html
@@ -23,6 +23,8 @@
 
   <!-- content -->
   <div class="content">
-    <app-datatable></app-datatable>
+    <app-datatable [tableData]="teachers" [tableColumns]="['status', 'name', 'email', 'age', 'role']"
+      [tableHeaderCells]="['Status', 'Nome', 'E-mail', 'Idade', 'Profissão']">
+    </app-datatable>
   </div>
 </section>
