--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -2,13 +2,13 @@
   <!-- filter and buttons -->
   <div class="filter-btns" fxLayoutAlign="space-between">
     <mat-form-field fxFlex="50%">
-      <input matInput type="text" placeholder="Buscar na tabela">
+      <input matInput type="text" (keyup)="filterTable($event.target.value)" placeholder="Filter">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
 
   <!-- table -->
-  <mat-table [dataSource]="tableData" matSort>
+  <mat-table [dataSource]="matTableDataSource" matSort>
     <ng-container *ngFor="let column of tableColumns; let i = index;" [matColumnDef]="column">
       <mat-header-cell *matHeaderCellDef mat-sort-header>{{tableHeaderCells[i]}}</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element[column]}}</mat-cell>
@@ -16,8 +16,9 @@
 
     <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: tableColumns;"></mat-row>
-
   </mat-table>
+
+  <mat-spinner *ngIf="isLoading" diameter="35"></mat-spinner>
 
   <!-- paginator -->
   <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 50]"></mat-paginator>
