--- a/src/app/pages/students/main/students.component.html
+++ b/src/app/pages/students/main/students.component.html
@@ -23,8 +23,8 @@
 
   <!-- content -->
   <div class="content">
-    <app-datatable [tableData]="students" [tableColumns]="['status', 'name', 'email', 'age', 'course']"
-      [tableHeaderCells]="['Status', 'Nome', 'E-mail', 'Idade', 'Curso']">
+    <app-datatable [tableData]="students" [tableColumns]="['name', 'email', 'age', 'course']"
+      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Curso']" [hasStatus]="true">
     </app-datatable>
   </div>
 </section>
