--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -2,22 +2,46 @@
   <!-- filter and buttons -->
   <div class="filter-btns" fxLayoutAlign="space-between">
     <mat-form-field fxFlex="50%">
-      <input matInput type="text" (keyup)="filterTable($event.target.value)" placeholder="Filter">
+      <input matInput type="text" (keyup)="filterTable($event.target.value)" placeholder="Filtrar">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
 
   <!-- table -->
   <mat-table [dataSource]="matTableDataSource" matSort>
+
+    <!-- status column -->
+    <ng-container matColumnDef="status" *ngIf="hasStatus">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{element.status}}
+      </mat-cell>
+    </ng-container>
+
+    <!-- data columns -->
     <ng-container *ngFor="let column of tableColumns; let i = index;" [matColumnDef]="column">
       <mat-header-cell *matHeaderCellDef mat-sort-header>{{tableHeaderCells[i]}}</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element[column]}}</mat-cell>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: tableColumns;"></mat-row>
+    <!-- action btns column-->
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>Ações</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button mat-icon-button matTooltip="Editar" matTooltipPosition="above">
+          <mat-icon>create</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" matTooltip="Excluir" matTooltipPosition="above">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
+  <!-- spinner -->
   <mat-spinner *ngIf="isLoading" diameter="35"></mat-spinner>
 
   <!-- paginator -->
