Configured page-title component to recieve isForm and isEditing inputs; Changed students-details and teachers-details page-title values

--- a/src/app/pages/students/details/students-details.component.html
+++ b/src/app/pages/students/details/students-details.component.html
@@ -7,7 +7,7 @@
 
   <!-- page title -->
   <app-page-title [pageTitle]="{
-    icon: 'school', title: 'Aluno'}">
+    icon: 'school', title: 'Aluno'}" [isForm]="true" [isEditing]="isEditing">
   </app-page-title>
 
   <!-- content -->
