--- a/src/app/pages/teachers/details/teachers-details.component.html
+++ b/src/app/pages/teachers/details/teachers-details.component.html
@@ -7,7 +7,7 @@
 
   <!-- page title -->
   <app-page-title [pageTitle]="{
-    icon: 'accessibility_new', title: 'Professor'}">
+    icon: 'accessibility_new', title: 'Professor'}" [isForm]="true" [isEditing]="isEditing">
   </app-page-title>
 
   <!-- content -->
