--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -28,7 +28,8 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>Ações</mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <button mat-icon-button matTooltip="Editar" matTooltipPosition="above" color="primary">
+        <button mat-icon-button matTooltip="Editar" matTooltipPosition="above" color="primary"
+          (click)="editTableItem(element)">
           <mat-icon>create</mat-icon>
         </button>
         <button mat-icon-button color="warn" matTooltip="Excluir" matTooltipPosition="above">
