Added loading spinners on page load and save; added fake timout api response

--- a/src/app/pages/students/details/students-details.component.css
+++ b/src/app/pages/students/details/students-details.component.css
@@ -5,3 +5,11 @@ form {
 mat-form-field {
   width: 100% !important;
 }
+
+.form-spinner {
+  margin: 0 auto;
+}
+
+.submit-form-spinner {
+  display: inline-flex;
+}
