Installed angular2-notifications; Created uxService to store notifications and other types of ux integrations; Configured notifications for create and update student

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,4 @@
     <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
+<simple-notifications [options]="{position: ['top', 'right']}"></simple-notifications>
