--- a/src/app/pages/students/details/students-details.component.html
+++ b/src/app/pages/students/details/students-details.component.html
@@ -38,7 +38,8 @@
             <!-- age -->
             <mat-form-field appearance="outline">
               <mat-label>Idade</mat-label>
-              <input matInput type="number" placeholder="Digite a idade" name="age" formControlName="age" required>
+              <input matInput type="number" placeholder="Digite a idade" name="age" formControlName="age" max="2"
+                required>
               <mat-error>Idade é obrigatório.</mat-error>
             </mat-form-field>
           </div>
