#Students CRUD - Added delete function with a dialog component; Students status changes with updateStudent call configured

--- a/src/app/pages/students/main/students.component.html
+++ b/src/app/pages/students/main/students.component.html
@@ -24,7 +24,8 @@
   <!-- content -->
   <div class="content">
     <app-datatable [tableData]="students" [tableColumns]="['name', 'email', 'age', 'course']"
-      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Curso']" [hasStatus]="true" (editItem)="editStudent($event)">
+      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Curso']" [hasStatus]="true" (editItem)="editStudent($event)"
+      (deleteItem)="deleteStudent($event)" (changeItemStatus)="changeStudentStatus($event)">
     </app-datatable>
   </div>
 </section>
