--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -14,7 +14,8 @@
     <ng-container matColumnDef="status" *ngIf="hasStatus">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <mat-slide-toggle color="primary" [ngModel]="element.status"></mat-slide-toggle>
+        <mat-slide-toggle color="primary" [ngModel]="element.status" (change)="changeTableItemStatus(element, $event)">
+        </mat-slide-toggle>
       </mat-cell>
     </ng-container>
 
@@ -32,7 +33,8 @@
           (click)="editTableItem(element)">
           <mat-icon>create</mat-icon>
         </button>
-        <button mat-icon-button color="warn" matTooltip="Excluir" matTooltipPosition="above">
+        <button mat-icon-button color="warn" matTooltip="Excluir" matTooltipPosition="above"
+          (click)="deleteTableItem(element)">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-cell>
