--- a/src/app/pages/teachers/details/teachers-details.component.html
+++ b/src/app/pages/teachers/details/teachers-details.component.html
@@ -12,6 +12,76 @@
 
   <!-- content -->
   <div class="content">
-    <p>Teachers Details</p>
+    <form [formGroup]="teacherForm" (ngSubmit)="submitTeacherForm(teacherForm.value)" *ngIf="!isLoading">
+      <mat-grid-list cols="2" rowHeight="450px">
+        <mat-grid-tile>
+          <div fxLayout="column" class="w-80">
+            <h4>Dados do professor</h4>
+            <!-- name -->
+            <mat-form-field appearance="outline">
+              <mat-label>Nome</mat-label>
+              <input matInput placeholder="Digite o nome" name="name" formControlName="name" required>
+              <mat-error>Nome é obrigatório.</mat-error>
+            </mat-form-field>
+            <!-- email -->
+            <mat-form-field appearance="outline">
+              <mat-label>E-mail</mat-label>
+              <input matInput type="email" placeholder="Digite o e-mail" name="email" formControlName="email" required>
+              <mat-error
+                *ngIf="teacherForm.get('email').hasError('email') && !teacherForm.get('email').hasError('required')">
+                Por favor, entre um e-mail válido.
+              </mat-error>
+              <mat-error *ngIf="teacherForm.get('email').hasError('required')">
+                E-mail é obrigatório.
+              </mat-error>
+            </mat-form-field>
+            <!-- age -->
+            <mat-form-field appearance="outline">
+              <mat-label>Idade</mat-label>
+              <input matInput type="number" placeholder="Digite a idade" name="age" formControlName="age" max="2"
+                required>
+              <mat-error>Idade é obrigatório.</mat-error>
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div fxLayout="column" class="w-80">
+            <h4>Curso</h4>
+            <!-- roles -->
+            <mat-form-field appearance="outline">
+              <mat-label>Selecione uma profissão</mat-label>
+              <mat-select name="role" formControlName="role" required>
+                <mat-option *ngFor="let role of roles" [value]="role.name">
+                  {{role.name}}
+                </mat-option>
+              </mat-select>
+              <mat-error>Por favor, selecione uma profissão.</mat-error>
+            </mat-form-field>
+            <mat-divider></mat-divider>
+            <!-- date -->
+            <h4>Data de início</h4>
+            <mat-form-field appearance="outline">
+              <mat-label>Selecione uma data</mat-label>
+              <input matInput [matDatepicker]="picker" name="date" formControlName="date" required>
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+              <mat-error>Por favor, selecione uma data.</mat-error>
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
+      </mat-grid-list>
+
+      <div fxLayoutAlign="end end">
+        <!-- form buttons -->
+        <button mat-stroked-button type="button" class="mr-1" (click)="cancelForm()">Cancelar</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="isSubmittingForm || teacherForm.invalid">
+          <mat-spinner *ngIf="isSubmittingForm" diameter="20" class="submit-form-spinner"></mat-spinner>
+          Salvar
+        </button>
+      </div>
+    </form>
+
+    <!-- spinner -->
+    <mat-spinner *ngIf="isLoading" diameter="75" class="form-spinner"></mat-spinner>
   </div>
 </section>
