--- a/src/app/pages/teachers/main/teachers.component.html
+++ b/src/app/pages/teachers/main/teachers.component.html
@@ -24,7 +24,8 @@
   <!-- content -->
   <div class="content">
     <app-datatable [tableData]="teachers" [tableColumns]="['name', 'email', 'age', 'role']"
-      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Profissão']" [hasStatus]="false">
+      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Profissão']" [hasStatus]="false" (editItem)="editTeacher($event)"
+      (deleteItem)="deleteTeacher($event)">
     </app-datatable>
   </div>
 </section>
