--- a/src/app/pages/students/main/students.component.html
+++ b/src/app/pages/students/main/students.component.html
@@ -23,8 +23,8 @@
 
   <!-- content -->
   <div class="content">
-    <app-datatable [tableData]="students" [tableColumns]="['name', 'email', 'age', 'course']"
-      [tableHeaderCells]="['Nome', 'E-mail', 'Idade', 'Curso']" [hasStatus]="true" (editItem)="editStudent($event)"
+    <app-datatable [tableData]="students" [tableColumns]="['name', 'email', 'date', 'course']"
+      [tableHeaderCells]="['Nome', 'E-mail', 'Início', 'Curso']" [hasStatus]="true" (editItem)="editStudent($event)"
       (deleteItem)="deleteStudent($event)" (changeItemStatus)="changeStudentStatus($event)">
     </app-datatable>
   </div>
