--- a/src/app/pages/teachers/main/teachers.component.html
+++ b/src/app/pages/teachers/main/teachers.component.html
@@ -11,10 +11,7 @@
 
   <!-- buttons -->
   <div class="mb-2">
-    <button mat-raised-button class="mr-1">
-      <mat-icon>upgrade</mat-icon>
-      Exportar
-    </button>
+    <app-export-data></app-export-data>
     <button mat-raised-button color="primary" (click)="addTeacher()">
       <mat-icon>person_add</mat-icon>
       Add Professor
