--- a/src/app/pages/students/main/students.component.html
+++ b/src/app/pages/students/main/students.component.html
@@ -11,10 +11,10 @@
 
   <!-- buttons -->
   <div class="mb-2">
-    <button mat-raised-button class="mr-1">
-      <mat-icon>upgrade</mat-icon>
-      Exportar
-    </button>
+    <app-export-data [data]="exportStudentsData" [title]="'Alunos'"
+      [fields]="['Nome', 'E-mail', 'Idade', 'Início', 'Curso', 'Status']"
+      [labels]="['Nome', 'E-mail', 'Idade', 'Início', 'Curso', 'Status']">
+    </app-export-data>
     <button mat-raised-button color="primary" (click)="addStudent()">
       <mat-icon>person_add</mat-icon>
       Add Aluno
